# stm32-cmake

./: README.mediawiki  gcc_stm32.cmake
cmake/Modules/: FindCMSIS.cmake  FindStdPeriphLib.cmake
cmsis/: CMakeLists.txt
stdperiph/: CMakeLists.txt
stm32-blinky/: CMakeLists.txt  main.c
stm32-newlib/: CMakeLists.txt  stm32f10x_conf.h
stm32-template/: CMakeLists.txt
