PROJECT(stm32stdperiph)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_LANGUAGE(ASM)

IF(NOT STM32_SPL_DIR)
	SET(STM32_SPL_DIR "/opt/STM32F10x_StdPeriph_Lib_V3.5.0")
	MESSAGE(STATUS "No STM32_SPL_DIR specified, using default: " ${STM32_SPL_DIR})
ENDIF()

IF(NOT STM32_FAMILY)
	SET(STM32_FAMILY "F10x")
	MESSAGE(STATUS "No STM32_FAMILY specified, using default: " ${STM32_FAMILY})
ENDIF()
STRING(TOLOWER "${STM32_FAMILY}" STM32_FAMILY_L)
STRING(TOUPPER "${STM32_FAMILY}" STM32_FAMILY_U)
MESSAGE(STATUS "Building for STM32${STM32_FAMILY_U} family")

IF(STM32_FAMILY_U STREQUAL "F10X")
        INCLUDE_DIRECTORIES(
		${STM32_SPL_DIR}/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/
		${STM32_SPL_DIR}/Libraries/CMSIS/CM3/CoreSupport/
		${STM32_SPL_DIR}/Libraries/STM32F10x_StdPeriph_Driver/inc/
	)
	SET(STM32_SPL_SRC_PATH ${STM32_SPL_DIR}/Libraries/STM32F10x_StdPeriph_Driver/src/)
	SET(STM32_SPL_INC_PATH ${STM32_SPL_DIR}/Libraries/STM32F10x_StdPeriph_Driver/inc/)
	SET(DENSITY_LIST_U HD HD_VL MD MD_VL LD LD_VL XD CL)
ELSEIF(STM32_FAMILY_U STREQUAL "L1XX")
	INCLUDE_DIRECTORIES(
		${STM32_SPL_DIR}/Libraries/CMSIS/Device/ST/STM32L1xx/Include/
		${STM32_SPL_DIR}/Libraries/CMSIS/Include/
		${STM32_SPL_DIR}/Libraries/STM32L1xx_StdPeriph_Driver/inc/
	)
	SET(STM32_SPL_SRC_PATH ${STM32_SPL_DIR}/Libraries/STM32L1xx_StdPeriph_Driver/src/)
	SET(STM32_SPL_INC_PATH ${STM32_SPL_DIR}/Libraries/STM32L1xx_StdPeriph_Driver/inc/)
	SET(DENSITY_LIST_U HD MD MDP)
ELSE()
	MESSAGE(FATAL_ERROR "Unknown stm32 family.")
ENDIF()

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

FILE(GLOB LIB_SOURCES ${STM32_SPL_SRC_PATH}/*.c)
FILE(GLOB LIB_HEADERS ${STM32_SPL_INC_PATH}/*.h)

IF(USE_ASSERT)
    ADD_DEFINITIONS("-D\"assert_param(expr)\"=\"((expr) ? (void)0 : assert_failed((uint8_t *)__FILE__, __LINE__))\"")
ELSE()
    ADD_DEFINITIONS("-D\"assert_param(expr)\"=\"((void)0)\"")
ENDIF()

FOREACH(DENSITY_U ${DENSITY_LIST_U})
	STRING(TOLOWER "${DENSITY_U}" DENSITY_L)

	ADD_LIBRARY(stm32${STM32_FAMILY_L}_stdperiph_${DENSITY_L} ${LIB_SOURCES})
	SET_TARGET_PROPERTIES(stm32${STM32_FAMILY_L}_stdperiph_${DENSITY_L} PROPERTIES OMPILE_FLAGS "-DSTM32${STM32_FAMILY_U}_${DENSITY_U}")
	SET(STDPERIPH_TARGETS ${STDPERIPH_TARGETS} stm32${STM32_FAMILY_L}_stdperiph_${DENSITY_L})
ENDFOREACH(DENSITY_U)


INSTALL(TARGETS ${STDPERIPH_TARGETS}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

INSTALL(FILES
	${LIB_HEADERS}
	DESTINATION
	include/stm32${STM32_FAMILY_L}
)

